--- a/app/src/main/res/layout/activity_familia.xml
+++ b/app/src/main/res/layout/activity_familia.xml
@@ -137,9 +137,10 @@
             android:id="@+id/btnCrearFamilia"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@drawable/primary_button"
+            android:background="@drawable/third_button"
             android:fontFamily="serif"
             android:text="CREAR FAMILIA"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnUnirseFamilia"
             app:layout_constraintStart_toStartOf="parent"
@@ -149,9 +150,10 @@
             android:id="@+id/btnUnirseFamilia"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@drawable/primary_button"
+            android:background="@drawable/third_button"
             android:fontFamily="serif"
             android:text="UNIRSE A UNA FAMILIA"
+            android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnCrearFamilia"
