--- a/app/src/main/res/layout/activity_familia_seccionada.xml
+++ b/app/src/main/res/layout/activity_familia_seccionada.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif"
         android:text="NOMBRE DE LA FAMILIA"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,6 +37,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:fontFamily="serif"
         android:text="INGRESA LA CLAVE PARA UNIRTE"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         app:layout_constraintBottom_toTopOf="@+id/txtClaveIngresada"
@@ -59,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:ems="10"
+        android:fontFamily="serif"
         android:inputType="numberPassword"
         app:layout_constraintBottom_toTopOf="@+id/btnUnirme"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,17 +70,22 @@
 
     <Button
         android:id="@+id/btnUnirme"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="416dp"
+        android:layout_height="55dp"
+        android:background="@drawable/primary_button"
+        android:fontFamily="serif"
         android:text="UNIRME"
         app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnCancelar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="416dp"
+        android:layout_height="55dp"
+        android:background="@drawable/secundary_button"
+        android:fontFamily="serif"
         android:text="CANCELAR"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
