--- a/app/src/main/res/layout/activity_actividades_creadas.xml
+++ b/app/src/main/res/layout/activity_actividades_creadas.xml
@@ -8,8 +8,9 @@
 
     <Button
         android:id="@+id/btnVolver"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="61dp"
+        android:background="@drawable/secundary_button"
         android:text="VOLVER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
