--- a/app/src/main/res/layout/activity_editar_perfil.xml
+++ b/app/src/main/res/layout/activity_editar_perfil.xml
@@ -38,7 +38,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/primary_button"
+        android:background="@drawable/secundary_button"
         android:text="CANCELAR"
         android:typeface="serif"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,9 +62,10 @@
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@drawable/primary_button"
+        android:background="@drawable/third_button"
         android:fontFamily="serif"
         android:text="GALERIA"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/imgPerfil"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -141,9 +142,10 @@
         android:layout_width="101dp"
         android:layout_height="41dp"
         android:layout_marginStart="8dp"
-        android:background="@drawable/primary_button"
+        android:background="@drawable/third_button"
         android:fontFamily="serif"
         android:text="CAMARA"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toEndOf="@+id/imgPerfil"
         app:layout_constraintTop_toBottomOf="@+id/btnGaleria" />
 
