--- a/app/src/main/res/layout/activity_actividad_seleccionada.xml
+++ b/app/src/main/res/layout/activity_actividad_seleccionada.xml
@@ -9,7 +9,7 @@
     <Button
         android:id="@+id/btnVolver"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="VOLVER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,7 +18,7 @@
     <Button
         android:id="@+id/btnRealizado"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="REALIZADO"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"
@@ -226,7 +226,7 @@
     <Button
         android:id="@+id/btnEditarActividad"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="EDITAR"
         app:layout_constraintBottom_toTopOf="@+id/btnRealizado"
         app:layout_constraintEnd_toEndOf="parent"
@@ -235,7 +235,7 @@
     <Button
         android:id="@+id/btnEliminarActividad"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="ELIMINAR"
         app:layout_constraintBottom_toTopOf="@+id/btnRealizado"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
