--- a/app/src/main/res/layout/activity_familiar_seccionado.xml
+++ b/app/src/main/res/layout/activity_familiar_seccionado.xml
@@ -35,7 +35,7 @@
     <Button
         android:id="@+id/btnVolver"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="VOLVER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
     <Button
         android:id="@+id/btnRetirar"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="RETIRAR DEL GRUPO"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
@@ -79,7 +79,7 @@
     <Button
         android:id="@+id/btnHistorial"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:text="HISTORIAL"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"
