--- a/app/src/main/res/layout/activity_nueva_actividad.xml
+++ b/app/src/main/res/layout/activity_nueva_actividad.xml
@@ -67,7 +67,7 @@
     <Button
         android:id="@+id/btnCrearActivdad"
         android:layout_width="0dp"
-        android:layout_height="50dp"
+        android:layout_height="45dp"
         android:background="@drawable/primary_button"
         android:text="Crear la actividad"
         app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
@@ -77,8 +77,8 @@
 
     <Button
         android:id="@+id/btnCancelar"
-        android:layout_width="457dp"
-        android:layout_height="60dp"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
         android:background="@drawable/secundary_button"
         android:text="CANCELAR"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,8 +94,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtNombreActividad"
-        app:srcCompat="@drawable/ptext_camera"
-        tools:srcCompat="@drawable/ptext_camera" />
+        app:srcCompat="@drawable/bg" />
 
     <TextView
         android:id="@+id/textView10"
