last changes final

--- a/app/src/main/res/layout/activity_actividad_seleccionada.xml
+++ b/app/src/main/res/layout/activity_actividad_seleccionada.xml
@@ -10,7 +10,10 @@
         android:id="@+id/btnVolver"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/third_button"
+        android:fontFamily="serif"
         android:text="VOLVER"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -19,6 +22,8 @@
         android:id="@+id/btnRealizado"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/secundary_button"
+        android:fontFamily="serif"
         android:text="REALIZADO"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="HORA DE INICIO"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -68,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -80,6 +87,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="HORA DE FIN"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -92,6 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -104,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="PRIORIDAD"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -116,6 +126,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -128,6 +139,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="FECHA DE INICIO"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -140,6 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -152,6 +165,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="FECHA DE FIN"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -164,6 +178,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -176,6 +191,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="serif"
         android:text="PUNTAJE"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="14sp"
@@ -188,6 +204,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="17sp"
@@ -199,6 +216,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#99FFFFFF"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="24sp"
@@ -215,6 +233,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -227,6 +246,8 @@
         android:id="@+id/btnEditarActividad"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/primary_button"
+        android:fontFamily="serif"
         android:text="EDITAR"
         app:layout_constraintBottom_toTopOf="@+id/btnRealizado"
         app:layout_constraintEnd_toEndOf="parent"
@@ -236,7 +257,10 @@
         android:id="@+id/btnEliminarActividad"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/third_button"
+        android:fontFamily="serif"
         android:text="ELIMINAR"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btnRealizado"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintHorizontal_bias="0.584"
