--- a/app/src/main/res/layout/activity_familiar_seccionado.xml
+++ b/app/src/main/res/layout/activity_familiar_seccionado.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="16sp"
@@ -36,6 +37,8 @@
         android:id="@+id/btnVolver"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/secundary_button"
+        android:fontFamily="serif"
         android:text="VOLVER"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +48,10 @@
         android:id="@+id/btnRetirar"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/third_button"
+        android:fontFamily="serif"
         android:text="RETIRAR DEL GRUPO"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toStartOf="@+id/guideline5"
         app:layout_constraintStart_toStartOf="parent" />
@@ -57,6 +63,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +77,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="serif"
         android:text="TextView"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +88,10 @@
         android:id="@+id/btnHistorial"
         android:layout_width="0dp"
         android:layout_height="45dp"
+        android:background="@drawable/third_button"
+        android:fontFamily="serif"
         android:text="HISTORIAL"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnRetirar" />
@@ -110,5 +121,6 @@
         android:text="Actividades cumplidas el dia de hoy"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgPerfil" />
+        app:layout_constraintTop_toBottomOf="@+id/imgPerfil"
+        android:fontFamily="serif" />
 </androidx.constraintlayout.widget.ConstraintLayout>
