--- a/app/src/main/res/layout/activity_recompensa.xml
+++ b/app/src/main/res/layout/activity_recompensa.xml
@@ -6,6 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".activities.recompensa.RecompensaActivity">
 
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/bg" />
+
     <Button
         android:id="@+id/btnVolver"
         android:layout_width="0dp"
@@ -40,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvRecompensa"
+        android:id="@+id/rvReclamos"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
